--- a/styles/main.css
+++ b/styles/main.css
@@ -1,19 +1,12 @@
-@import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
-
-/*Typography
---------------------------------------------------------------*/
-body,
-button,
-input,
-select,
-textarea {
-	color: #404040;
-	font-family: "Comfortaa", Arial, sans-serif;
-	font-size: 14px;
-	line-height: 1.5;
+h1 {
+  text-decoration: underline;
 }
 
-h1,h2,h3,h4,h5,h6 {
-  font-family: "Patua One", serif;
-  letter-spacing: 2px;
+header {
+  background-color: bisque;
+  text-align: center;
+}
+
+body {
+  background-color: burlywood;
 }
